This file documents the major additions and syntax changes between releases.

1.4.11 or 1.5 ??
	Fix check_http regression in 1.4.10 where following redirects to
	  relative URLs on virtual hosts failed if both "-H" and "-I" were used
	Add stratum thresholds support to check_ntp (feature request #1703823)
	check_ntp now return UNKNOWN instead of WARNING if jitter is unavailable (jitter=-1.000000)
	  as long as the thresholds range inculde -1. If no offset threshold is specified
	  and the offset is unavailable, will return UNKNOWN as well.
	  NOTE: If jitter thresholds are specified as integers it will return CRITICAL if jitter
	  is "-1" as the default range starts at 0. See Examples in --help output.
	Merge two new checks that deprecates check_ntp: check_ntp_peer and check_ntp_time.
	  You should read the --help output so see which one is suitable for you. check_ntp_peer
	  implement stratum thresholds support (feature request #1703823).

1.4.10 28th September 2007
	Fix check_http buffer overflow vulnerability when following HTTP redirects
	check_http now explicitly asks HTTP/1.1 servers to close the connection
	  after completion of the response
	Check_ldaps' guessing which secure method to use (starttls vs. ssl on connect)
	  is now deprecated. See --help for further information.
	Check_disk now calls stat() on all filesystems to check. (Old: only the ones selected using -p)
	  A meaningful error message (eg "Stale NFS Handle") is printed if stat fails.
	New check_disk option -L: Only check local filesystems, but call stat() on remote ones, too.
	  Thus accessibility of remote filesystems can be checked without any threshold comparison.
	Check_disk's --help now prints some examples for the new features introduced in 1.4.8
	New check_disk -i/-I option to ignore pathes/partitions based on regular expressions
	New check_disk -A option to select all filesystems explicitly
	WARNING: check_disk's -E option must now be passed before -p or -r/-R arguments